tests/bad/01_missing_semicolon.src
# Test: Missing semicolon
void main() {
    return 42  # Missing semicolon
}
